--- a/BridgeExperiment/index.html
+++ b/BridgeExperiment/index.html
@@ -6,4 +6,5 @@
 //webkit.messageHandlers.BridgeTS.postMessage({ someProp: 'some value' });
 </script>
 <p style="color:red;" id="demo">Hello!</p>
+<div id='msg'></div>
 </body></html>
