--- a/macOS/BridgeExperiment/index.html
+++ b/macOS/BridgeExperiment/index.html
@@ -13,6 +13,7 @@ function tester() {
   log('new TestJSBinding getNumber should be 10 and it is: ' + value2);
   var value3 = TestJSBinding.randomNumber(10);
   log('new TestJSBinding randomNumber to 10: ' + value3);
+  //object.delete();
 } // @ts-ignore
 
 </script>
