fixed bind global functions

--- a/macOS/BridgeExperiment/index.html
+++ b/macOS/BridgeExperiment/index.html
@@ -21,6 +21,8 @@ function tester() {
   log('object.getNumber: ' + object.getNumber());
   
   object.delete();
+  
+  log('add_numbers: ' + JSBModule.add_numbers(1, 4));
 };
 window.tester = tester;
 
